Fix scroller and task list gap

--- a/src/assets/styles/cmps/TaskList.scss
+++ b/src/assets/styles/cmps/TaskList.scss
@@ -8,9 +8,10 @@
   margin: 0 rem(4px);
   list-style: none;
 
-  scroll-behavior: smooth;
+  overflow: auto;
+  scrollbar-color: var(--ds-background-neutral-hovered, #091e4224) var(--ds-background-neutral, #091e420f);
   scrollbar-width: thin;
-  scrollbar-color: var(--ds-background-neutral-hovered) var(--ds-background-neutral);
+  scroll-behavior: smooth;
   // flex: 1;
   
 }
